[Bugfix] Importing very old workspaces could fail in some cases